# surveillance-saraem

./: .env.example  .gitignore  BACKEND_SETUP.md  LICENSE  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_alert_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: alerts.py  auth.py  cameras.py  detections.py  metrics.py  search.py  videos.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  alert.py  attribute.py  camera.py  detection.py  performance.py  search.py  segmentation.py  user.py  video.py
backend/app/schemas/: __init__.py  alert.py  camera.py  detection.py  metrics.py  response.py  search.py  user.py  video.py
backend/app/services/: __init__.py  attribute_classifier.py  detector.py  nlp_parser.py  search_engine.py  segmentation.py  video_processor.py
backend/app/utils/: __init__.py  file_handler.py  image_utils.py  video_utils.py
docker/: Dockerfile.backend  nginx.conf
docs/: use-case-diagram.puml
frontend/: CLEANUP_COMPLETION_REPORT.md  PROJECT_AUDIT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/hooks/: index.ts  useAuth.tsx  useSearch.ts  useVideoUpload.ts
frontend/src/pages/: AlertDashboard.tsx  (+12 more)
(+43 files in other folders)
